jasn/examples/invalid/uppercase_hex_prefix.jasn
/* Invalid hex binary with lowercase prefix */
{
  bad: HEX"DEADBEEF"  /* Intentionally invalid: uppercase H should still be rejected */
}
